<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:gravity="center_horizontal"
    tools:context="com.zhaolongzhong.animation.SlideActivity">

    <TextView
        android:id="@+id/slide_activity_right_to_left_text_view_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"

        android:text="@string/slide_right_to_left"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_medium"
        android:background="@color/colorAmber"
        android:gravity="center"/>

    <TextView
        android:id="@+id/slide_activity_left_to_right_text_view_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/slide_activity_right_to_left_text_view_id"
        android:layout_margin="40dp"

        android:text="@string/slide_left_to_right"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_medium"
        android:background="@color/colorAmber"
        android:gravity="center"/>

    <TextView
        android:id="@+id/slide_activity_top_to_bottom_text_view_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/slide_activity_left_to_right_text_view_id"
        android:layout_margin="40dp"

        android:text="@string/slide_top_to_bottom"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_medium"
        android:background="@color/colorAmber"
        android:gravity="center"/>

    <TextView
        android:id="@+id/slide_activity_bottom_to_top_text_view_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/slide_activity_top_to_bottom_text_view_id"
        android:layout_margin="40dp"

        android:text="@string/slide_bottom_to_top"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_medium"
        android:background="@color/colorAmber"
        android:gravity="center"/>
</RelativeLayout>