<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:gravity="center_horizontal"
    tools:context="com.zhaolongzhong.animation.MainActivity">

    <TextView
        android:id="@+id/main_activity_explode_text_view_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"

        android:text="@string/animation_explode"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_medium"
        android:background="@color/colorBlue"
        android:gravity="center"/>

    <TextView
        android:id="@+id/main_activity_slide_text_view_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_explode_text_view_id"
        android:layout_margin="40dp"

        android:text="@string/animation_slide"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_medium"
        android:background="@color/colorBlue"
        android:gravity="center"/>

    <TextView
        android:id="@+id/main_activity_fade_text_view_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_slide_text_view_id"
        android:layout_margin="40dp"

        android:text="@string/animation_fade"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_medium"
        android:background="@color/colorBlue"
        android:gravity="center"/>
</RelativeLayout>